# v79-quest-home-porter

./: .gitignore  .mcp.json  GUIDE.md  README.md
.github/workflows/: release.yml
cooker/: axml.py  bake.sh  cook.py  fb.py  fb_asmh.py  gen_embedded_assets.py  make_flipbook_shader.py  make_oscillate_shader.py  make_pulse_shader.py  make_rotate_shader.py  make_vat_blend_shader.py  make_wisp_scale_shader.py  matl.py  matl2.py  rendmesh.py  rendshad.py  rendtxtr.py  sign.ps1  vat_shader_basecolor.bak
cooker/shaders/: myunlit.frag  myunlit.vert
hsr_renderer_cpp/: CMakeLists.txt  analyze_spirv.py  build.bat  build.py  check_ubo.py  do_build.bat  gen_spirv.py  gen_v79_shader.py
hsr_renderer_cpp/src/: _ckcook.cpp  asmh_parser.h  audio.h  editor.h  fallback_spirv.h  gl_loader.cpp  gl_loader.h  gltf_loader.h  hsl_cooker.h  hstf_parser.h  hzanim_acl.cpp  hzanim_acl.h  ibl.h  main.cpp  matlmatl_parser.h  miniaudio_impl.c  opa_loader.h  renderer.h  rendmesh_parser.h  rendshad_parser.h  rendskel_parser.h  rendtxtr_parser.h  scene_loader.h  stb_vorbis_impl.c  tinyjson.h  types.h  universal_shader.h  vk_renderer.h
hsr_renderer_cpp/src/cook/: _ckcook.cpp  cook_verify.h  embedded_assets.cpp  embedded_assets.h  haven_manifest_axml.h  hsl_cooker.h  hzanim_acl.cpp  node_rot_fit.h  physx_navmesh.cpp  physx_navmesh.h
hsr_renderer_cpp/src/core/: audio.h  audio_convert.h  camera.h  config.h  scene_items.h  types.h
hsr_renderer_cpp/src/impl/: stb_image_impl.c  stb_truetype_impl.c
hsr_renderer_cpp/src/io/: gltf_export.h  gltf_import.h
hsr_renderer_cpp/src/loaders/: asmh_parser.h  gltf_loader.h  hstf_parser.h  matlmatl_parser.h  opa_loader.h  rendmesh_parser.h  rendshad_parser.h  rendskel_parser.h  rendtxtr_parser.h  scene_loader.h
hsr_renderer_cpp/src/render/: gl_loader.cpp  ibl.h  renderer.h  v79_shader.h  vk_renderer.h
hsr_renderer_cpp/src/shadergen/: shadergen.h
hsr_renderer_cpp/src/ui/: _ui.frag  _ui.vert  editor.h  ui_core.h  ui_draw.h  ui_font.h  ui_shaders_spv.h
magisk_quest_ctl/: install.sh  module.prop  quest_ctl_mcp.py  service.sh
